--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
     </section>
 
     <!-- Sección Quienes Somos -->
-    <section id="somos" class="my-5">
+    <section id="somos" class="my-5 d-none d-sm-block">
         <div class="container">
 
             <div class="row mx-3">
-                <h1 class="title text-center mx-auto">¿QUIÉNES SOMOS</h1>
+                <h1 class="title fw-bold text-center py-3 mx-auto">¿QUIÉNES SOMOS?</h1>
                 <hr>
 
-                <div class="col-xs-12 col-md-4 my-3">
+                <div class="col-xs-12 col-md-4 my-5">
                     <div class="serv text-center">
                         <i class="fa-solid fa-plane"></i>
                     </div>
@@ -115,7 +115,7 @@
                         viajes, hotelería y gastronomía. ¡Asómbrate con viajes Chile!</p>
                 </div>
 
-                <div class="col-xs-12 col-md-4 my-3">
+                <div class="col-xs-12 col-md-4 my-5">
                     <h3 class="my-3 text-center">Actividades</h3>
                     <p>Recorre bosques, salares, glaciares y conoce una extensa variedad de flora y fauna nativa.
                         Ponte zapatos cómodos y camina por la naturaleza, la mejor manera de conocer Chile. Si te
@@ -125,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-md-4 my-3">
+                <div class="col-xs-12 col-md-4 my-5">
                     <div class="serv text-center">
                         <i class="fa-solid fa-route"></i>
                     </div>
@@ -142,17 +142,17 @@
 
 
     <!-- Sección destacados -->
-    <section id="destacados" class="mb-5">
+    <section id="destacados" class="my-5">
         <div class="container">
 
             <div class="row mx-3">
-                <h2 class="subtitle text-center mx-auto mb-4">DESTACADOS</h2>
+                <h2 class="subtitle fw-bold text-center py-3 mx-auto">DESTACADOS</h2>
                 <hr>
                 <div class="col-xs-12 col-md-3">
-                    <div class="card my-2 mx-auto">
+                    <div class="card my-3 mx-auto">
                         <img class="card-img-top" src="assets/img/card1.jpg" alt="Patagonia chilena">
                         <div class="card-body">
-                            <h5 class="card-title-01 fw-bold text-dark text-center" data-bs-toggle="tooltip" data-bs-placement="top"
+                            <h5 class="card-title-01 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
                                 title="'Haz click para ver efecto toggle'">Patagonia chilena</h5>
                             <p class="card-text-01">Una naturaleza casi inalterada plagada de montañas, fiordos,
                                 glaciares, bosques y el encanto austral.</p>
@@ -161,10 +161,10 @@
                 </div>
 
                 <div class="col-xs-12 col-md-3">
-                    <div class="card my-2 mx-auto">
+                    <div class="card my-3 mx-auto">
                         <img class="card-img-top" src="assets/img/card2.jpg" alt="Laguna Lejia - Antofagasta">
                         <div class="card-body">
-                            <h5 class="card-title-02 fw-bold text-dark text-center" data-bs-toggle="tooltip" data-bs-placement="top"
+                            <h5 class="card-title-02 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
                                 title="'Haz click para ver efecto toggle'">Laguna Lejia (Antofagasta)</h5>
                             <p class="card-text-02">Una belleza del altiplano del norte de Chile a una altura
                                 de 4.350 mts sobre el nivel del mar.</p>
@@ -173,10 +173,10 @@
                 </div>
 
                 <div class="col-xs-12 col-md-3">
-                    <div class="card my-2 mx-auto">
+                    <div class="card my-3 mx-auto">
                         <img class="card-img-top" src="assets/img/card3.jpg" alt="Salar de Atacama">
                         <div class="card-body">
-                            <h5 class="card-title-03 fw-bold text-dark text-center" data-bs-toggle="tooltip" data-bs-placement="top"
+                            <h5 class="card-title-03 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
                                 title="'Haz click para ver efecto toggle'">Salar de Atacama</h5>
                             <p class="card-text-03">Conoce el mayor depósito salino de Chile y es uno de los 
                                 lugares más turísticos del norte del pais.</p>
@@ -185,10 +185,10 @@
                 </div>
 
                 <div class="col-xs-12 col-md-3">
-                    <div class="card my-2 mx-auto">
-                        <img class="card-img-top" src="assets/img/card4.jpg" alt="bosque valdiviano">
+                    <div class="card my-3 mx-auto">
+                        <img class="card-img-top" src="assets/img/card4.jpg" alt="Bosque Valdiviano">
                         <div class="card-body">
-                            <h5 class="card-title-04 fw-bold text-dark text-center" data-bs-toggle="tooltip" data-bs-placement="top"
+                            <h5 class="card-title-04 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
                                 title="'Haz click para ver efecto toggle'">Bosque Valdiviano</h5>
                             <p class="card-text-04">La lluvia cae intensamente en los bosques milenarios.
                                 Turismo aventura en paraisos verdes.</p>
@@ -201,10 +201,10 @@
     </section>
 
     <!-- Sección contacto -->
-    <section id="contacto">
+    <section id="contacto" class="my-5">
         <div class="container">
             <div class="row px-5 d-flex align-items-center">
-                <h2 class="subtitle text-center mb-4">CONTACTO</h2>
+                <h2 class="subtitle fw-bold text-center py-3 mx-auto">CONTACTO</h2>
                 <hr>
                 <div class="col mx-auto">
                     <form class="my-5">
