--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active w-auto">
+                    <div class="carousel-item active">
                         <img src="assets/img/carousel1.jpg" class="carousel-img" alt="Norte de Chile">
                     </div>
                     <div class="carousel-item">
@@ -253,11 +253,17 @@
                     <h4 class="copyright">VIAJES CHILE</h4>
                 </div>
                 <div class="col-xs-12 col-md-4">
-                    <ul class="d-flex list-unstyled justify-content-center">
-                        <li><i class="fa-brands fa-github-square"></i></li>
-                        <li><i class="fa-brands fa-linkedin"></i></li>
-                        <li><i class="fa-brands fa-twitter-square"></i></li>
-                        <li><i class="fa-brands fa-facebook-square"></i></li>
+                    <ul class="d-flex list-unstyled justify-content-center text-decoration-none">
+                        <li><a href="https://github.com/SergioESR/">
+                            <i class="fa-brands fa-github-square"></i></a>
+                        </li>
+                        <li><a href="https://www.linkedin.com/in/sergio-sepulveda/">
+                            <i class="fa-brands fa-linkedin"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
+                        <li><a href="https://www.facebook.com/EseeseDart/">
+                            <i class="fa-brands fa-facebook-square text-decoration-none"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
